[gd_scene load_steps=13 format=3 uid="uid://dbjmx2vyascrc"]

[ext_resource type="Script" path="res://ball.gd" id="1_5v5nn"]
[ext_resource type="Script" path="res://game_view.gd" id="1_de1wb"]
[ext_resource type="Texture2D" uid="uid://0dphgxg8b45o" path="res://icon.svg" id="2_0m5u0"]
[ext_resource type="Script" path="res://player.gd" id="3_ujm60"]
[ext_resource type="Script" path="res://ai.gd" id="4_p0fw2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6erw"]
size = Vector2(1152, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yseqk"]
size = Vector2(1152, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_xnhhy"]
radius = 22.8035

[sub_resource type="CircleShape2D" id="CircleShape2D_gsaep"]
radius = 18.1108

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yym1x"]
size = Vector2(44, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4dfn"]
size = Vector2(23, 111)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5u4s"]
size = Vector2(23, 111)

[node name="Pong" type="Node"]
script = ExtResource("1_de1wb")

[node name="PlayerScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = 50.0
offset_right = -35.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_colors/font_color = Color(6.01634e-09, 0.26907, 2.40654e-07, 1)
theme_override_font_sizes/font_size = 35

[node name="AIScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 36.0
offset_top = 50.0
offset_right = 37.0
offset_bottom = 99.0
grow_horizontal = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0.270588, 0, 1)
theme_override_font_sizes/font_size = 35

[node name="CountdownLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_top = 90.0
offset_right = 5.0
offset_bottom = 113.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.137255, 0.972549, 0.223529, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1

[node name="wall top" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall top"]
position = Vector2(576, 3.5)
shape = SubResource("RectangleShape2D_m6erw")

[node name="ColorRect" type="ColorRect" parent="wall top"]
offset_top = 640.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="wall bottom" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall bottom"]
position = Vector2(576, 644)
shape = SubResource("RectangleShape2D_yseqk")

[node name="ColorRect" type="ColorRect" parent="wall bottom"]
offset_right = 1152.0
offset_bottom = 8.0

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(580, 296)
script = ExtResource("1_5v5nn")

[node name="CollisionDetector" type="Area2D" parent="Ball"]
position = Vector2(1, 3)

[node name="CollisionDetectorShape" type="CollisionShape2D" parent="Ball/CollisionDetector"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_xnhhy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ball"]
position = Vector2(1, 3)
shape = SubResource("CircleShape2D_gsaep")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
position = Vector2(1.00006, 3)
scale = Vector2(0.258362, 0.260376)
texture = ExtResource("2_0m5u0")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-7, 6)
script = ExtResource("3_ujm60")

[node name="PlayerCollisionDetector" type="Area2D" parent="Player"]
position = Vector2(110, 632)

[node name="PlayerCollisionDetectorShape" type="CollisionShape2D" parent="Player/PlayerCollisionDetector"]
position = Vector2(-57, -311)
shape = SubResource("RectangleShape2D_yym1x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(53.5, 319.5)
shape = SubResource("RectangleShape2D_s4dfn")

[node name="ColorRect" type="ColorRect" parent="Player"]
offset_left = 42.0
offset_top = 264.0
offset_right = 65.0
offset_bottom = 375.0
color = Color(0.109804, 0.305882, 1, 1)

[node name="AI" type="CharacterBody2D" parent="."]
script = ExtResource("4_p0fw2")

[node name="AICollisionDetector" type="Area2D" parent="AI"]
position = Vector2(55, 316)

[node name="AICollisionDetectorShape" type="CollisionShape2D" parent="AI/AICollisionDetector"]
position = Vector2(1046, 5)
shape = SubResource("RectangleShape2D_yym1x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI"]
position = Vector2(1100.5, 320.5)
shape = SubResource("RectangleShape2D_d5u4s")

[node name="ColorRect" type="ColorRect" parent="AI"]
offset_left = 1089.0
offset_top = 265.0
offset_right = 1113.0
offset_bottom = 377.0
color = Color(1, 0.12549, 0.243137, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="Ball/CollisionDetector" to="Ball" method="_on_collision_detector_area_entered"]
[connection signal="timeout" from="Timer" to="Ball" method="_on_timer_timeout"]
